# ROS

./: README.md
dashgo_ws/: .ycm_extra_conf.py
dashgo_ws/devel/: .catkin  .rosinstall  setup.sh
dashgo_ws/devel/include/dashgo_tools/: check_msgAction.h  check_msgActionFeedback.h  check_msgActionGoal.h  check_msgActionResult.h  check_msgFeedback.h  check_msgGoal.h  check_msgResult.h
dashgo_ws/devel/lib/flashgo/: flashgo_client  flashgo_node
dashgo_ws/devel/lib/pathgo_imu/: sync_imu_node
dashgo_ws/devel/lib/pkgconfig/: dashgo_description.pc  dashgo_driver.pc  dashgo_nav.pc  dashgo_rviz.pc  dashgo_tools.pc  flashgo.pc  pathgo_imu.pc  simple_navigation_goals.pc  uwb_localization.pc
dashgo_ws/devel/lib/simple_navigation_goals/: follower  get_location  get_robot_pose  send_goal
dashgo_ws/devel/share/dashgo_description/cmake/: dashgo_descriptionConfig.cmake
dashgo_ws/src/dashgo/: README.md
dashgo_ws/src/dashgo/dashgo_driver/: package.xml
dashgo_ws/src/dashgo/dashgo_tools/: CMakeLists.txt  package.xml
dashgo_ws/src/dashgo/pathgo_imu/: CMakeLists.txt  package.xml
dashgo_ws/src/dashgo/pathgo_imu/launch/: demo.launch
dashgo_ws/src/dashgo/pathgo_imu/params/: imu_params.yaml
dashgo_ws/src/dashgo/pathgo_imu/src/: sync_imu_node.cpp
dashgo_ws/src/dashgo/simple_navigation_goals/: CMakeLists.txt
dashgo_ws/src/uwb_localization/launch/: +q  localize.launch  localize_lyh.launch  tf (复件).launch  tf.launch
dashgo_ws/src/uwb_localization/maps/: 503.pgm  503.yaml
dashgo_ws/src/uwb_localization/scripts/: .localize.py.swp  localize.py
(+116 files in other folders)
